renamed header into nav

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	
-	<header id="header-wrapper">
+	<nav id="nav-wrapper">
 		<a class="header-icon" href="https://www.github.com/sakiskid" target="_blank">
 			<i class="fab fa-github-square fa-fw fa-4x"></i>
 			<span class="header-label">Github</span>
@@ -23,18 +23,13 @@
 			<i class="fab fa-linkedin fa-fw fa-4x"></i>
 			<span class="header-label">LinkedIn</span>
 		</a>
-	</header>
+	</nav>
 
 	<main id="container-content">
 		<section id="splash">
 			<h1>Tyler Smith</h1>
 			<h2>Web Developer</h2>
 			<!-- <h2>C# Game Developer</h2> -->
-		</section>
-		
-		<section id="showcase-wrapper">
-			<h1>Showcase</h1>
-			<article class="active"></article>
 		</section>
 	</main>
 
