added 2 projects to portfolio, removed contact from navbar

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 				<li class="nav-item pt-2 pt-md-1">
 					<a class="nav-link" href="./portfolio.html">portfolio</a>
 				</li>
-				<li class="nav-item pt-2 pt-md-1">
+				<!-- <li class="nav-item pt-2 pt-md-1">
 					<a class="nav-link" href="./contact.html">contact</a>
-				</li>
+				</li> -->
 			</ul>
 		</div>
 	</nav>
@@ -52,9 +52,9 @@
 	<main>
 		<!-- img on left side of screen -->
 		<!-- TODO replace this with actual picture and fix alt tags -->
-		<img src="https://www.fillmurray.com/1920/1080" class="img-fluid" alt="Tyler Smith" width="33%" height="100%"
+		<img src="./Assets/my-images/tyler-large.jpeg" class="img-fluid" alt="Tyler Smith" width="33%" height="100%"
 			id="bio-picture-img">
-		<img src="https://www.fillmurray.com/1200/800" class="d-flex" alt="Tyler Smith Smaller Image" width="100%" id="bio-picture-img--sm">
+		<img src="./Assets/my-images/tyler-full.jpeg" class="d-flex" alt="Tyler Smith Smaller Image" width="100%" id="bio-picture-img--sm">
 
 		<section class="container-fluid">
 			<div class="row">
