--- a/portfolio.html
+++ b/portfolio.html
@@ -35,9 +35,9 @@
 				<li class="nav-item pt-2 pt-md-1">
 					<a class="nav-link" href="./portfolio.html">portfolio</a>
 				</li>
-				<li class="nav-item pt-2 pt-md-1">
+				<!-- <li class="nav-item pt-2 pt-md-1">
 					<a class="nav-link" href="./contact.html">contact</a>
-				</li>
+				</li> -->
 			</ul>
 		</div>
 	</nav>
@@ -49,10 +49,48 @@
 		<div class="container">
 			<div class="row mt-4 justify-content-center text-center">
 				<div class="display-4">
-					Archived Projects
+					Finished Projects
 				</div>
 			</div>
 			<!-- Two Projects Per Row, so it looks good responsively -->
+			<div class="row">
+				<div class="col">
+					<div class="card border border-secondary">
+						<img class="card-img-top" src="./Assets/my-images/big-picture.png" width="100%" height="100%" alt="Big Picture">
+						<div class="card-body">
+							<h5 class="card-title">Big Picture</h5>
+							<p class="card-text">
+								Big Picture lets you analyze job listings and view them in a graph. 
+								Find out what the most used keywords for your field are, or where your job is most prominent in the US.
+								<br> <a href="https://sakiskid.github.io/Big-Picture/" target="_blank">Click here to start.</a>
+							</p>
+							<p class="text-muted mt-2">Sept. 2020</p>
+						</div>
+					</div>
+				</div>
+				<div class="col">
+					<div class="card border border-secondary">
+						<img class="card-img-top" src="./Assets/my-images/weather-preview.gif" width="100%" height="100%" alt="Minimalist Weather Dashboard">
+						<div class="card-body">
+							<h5 class="card-title">Minimalist Weather Dashboard</h5>
+							<p class="card-text">
+								This Weather Dashboard features up-to-date weather information from around the globe. 
+								View the weather of any city, state, or country with the click of a button.
+								Features a sleek design, City ID lookup, and a 5 day weather forecast.
+								<br> <a href="https://sakiskid.github.io/Weather-Dashboard/" target="_blank">Click here to start.</a>
+							</p>
+							<p class="text-muted mt-2">Aug. 2020</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			<div class="row mt-4 justify-content-center text-center">
+				<div class="display-4">
+					Archived Projects
+				</div>
+			</div>
+			
 			<div class="row">
 				<div class="col">
 					<div class="card border border-secondary">
