--- a/index.html
+++ b/index.html
@@ -100,7 +100,15 @@
 		<div class="container-fluid text-center">
 			<div class="row">
 				<div class="col">
-					<small>Copyright © 2020 Tyler Smith. All Rights Reserved.</small>
+					<small> 
+						<a href="https://www.linkedin.com/in/tyler-smith-atx/" target="_blank">LinkedIn</a> |
+						<a href="https://github.com/Sakiskid" target="_blank">GitHub</a> |
+						<a href="resume href" target="_blank">Resume</a>
+					</small>
+					<br>
+					<small>Phone: 713-854-6795 | Email: tylerdrew.work@gmail.com</small>
+					<br>
+					<small class="footer-muted">Created by Tyler Smith | Last updated Sept. 2020</small>
 				</div>
 			</div>
 		</div>
