added gradient hack to about page

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 					<div class="row">
 						<div class="col text-center"></div>
 					</div>
+					<div id="main-content-gradient-hack"></div>
 				</div>
 				<!-- Right Column Contains 1-2 columns with info -->
 				<!-- NOTE Couldn't figure out how to vertically align these two divs each taking up 50% height -->
@@ -106,7 +107,7 @@
 						<a href="resume href" target="_blank">Resume</a>
 					</small>
 					<br>
-					<small>Phone: 713-854-6795 | Email: tylerdrew.work@gmail.com</small>
+					<small>713-854-6795 | tylerdrew.work@gmail.com</small>
 					<br>
 					<small class="footer-muted">Created by Tyler Smith | Last updated Sept. 2020</small>
 				</div>
