--- a/portfolio.html
+++ b/portfolio.html
@@ -135,7 +135,7 @@
 						<a href="resume href" target="_blank">Resume</a>
 					</small>
 					<br>
-					<small>Phone: 713-854-6795 | Email: tylerdrew.work@gmail.com</small>
+					<small>713-854-6795 | tylerdrew.work@gmail.com</small>
 					<br>
 					<small class="footer-muted">Created by Tyler Smith | Last updated Sept. 2020</small>
 				</div>
