styling changes, finished portfolio page

--- a/index.html
+++ b/index.html
@@ -71,11 +71,10 @@
 					<div class="row bio-row">
 						<div class="col">
 							<div class=bio-header>
-								<p>Full-stack</p>
-								<p>Web Developer</p>
+								<p>Front End Web Developer</p>
 							</div>
 							<p class="bio-desc">
-								HTML, CSS, JS, React, etc...
+								Git, HTML5, CSS3, JavaScript, Node.js, Chart.js, jQuery
 							</p>
 						</div>
 					</div>
@@ -83,7 +82,17 @@
 						<div class="col">
 							<p class="bio-header">Game Designer</p>
 							<p class="bio-desc">
-								C#, Unity, Physics-engines
+								C#, Unity Engine, Physics-Engines, AI Algorithms
+							</p>
+						</div>
+					</div>
+					<div class="row bio-row">
+						<div class="col">
+							<p class="bio-header">Audio Engineer</p>
+							<p class="bio-desc">
+								Music Production: FL Studio 20, Ableton Live
+								<br> 
+								Game Audio: FMOD, Audacity, Field Recording
 							</p>
 						</div>
 					</div>
@@ -106,9 +115,15 @@
 						<a href="https://github.com/Sakiskid" target="_blank">GitHub</a> |
 						<a href="resume href" target="_blank">Resume</a>
 					</small>
-					<br>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col pt-1">
 					<small>713-854-6795 | tylerdrew.work@gmail.com</small>
-					<br>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col pt-1">
 					<small class="footer-muted">Created by Tyler Smith | Last updated Sept. 2020</small>
 				</div>
 			</div>
