--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
 	<!-- MAIN CONTENT, Projects -->
     <main>
 		<div class="container">
-			<div class="row mt-4 justify-content-center text-center">
+			<div class="row mt-4 mb-4 justify-content-center text-center">
 				<div class="display-4">
 					Finished Projects
 				</div>
@@ -90,6 +90,16 @@
 					Archived Projects
 				</div>
 			</div>
+			<div class="row">
+				<div class="col text-center mb-4">
+					<p class="text-muted">
+						Archived Projects due to restraints in one form or another. <br>
+						These projects are archived on an old hard drive, long before I knew about Git and Github. I plan on uploading them :)
+						<br><br>
+						These games were both passion projects for me. Physics-Based games have always captivated me because of the endless possibilities brought on by physics!
+					</p>
+				</div>
+			</div>
 			
 			<div class="row">
 				<div class="col">
@@ -101,6 +111,10 @@
 							</h5>
 							<p class="card-text">
 								Physics-Based Arena Brawler (PBAB) is a top-down gladiator simulator. Fight your way through waves of enemies while you try to survive.
+								<br>
+								<a href="https://sakiskid.itch.io/pbab" target="_blank">Click here</a> to view PBAB's Development Log. <br>
+								<a href="https://www.youtube.com/watch?v=iwSDHCeKnDw&ab_channel=SoundPaladin">
+									Click here</a> to watch a trailer of the last update released for PBAB.
 							</p>
 							<p class="text-muted mt-2">2018-2019</p>
 						</div>
@@ -114,7 +128,8 @@
 								Backflip Master
 							</h5>
 							<p class="card-text">
-								Backflip Master is a physics-based backflipping game. Avenge the death of a loved one by backflipping your way to justice.
+								Backflip Master is a physics-based backflipping game. Avenge the death of a loved one by backflipping your way to justice. <br>
+								<a href="https://sakiskid.itch.io/backflip-master" target="_blank">Click here</a> for the BM Development Log.
 							</p>
 							<p class="text-muted mt-2">2019-2020</p>
 						</div>
