added complete resume

--- a/portfolio.html
+++ b/portfolio.html
@@ -147,7 +147,7 @@
 					<small> 
 						<a href="https://www.linkedin.com/in/tyler-smith-atx/" target="_blank">LinkedIn</a> |
 						<a href="https://github.com/Sakiskid" target="_blank">GitHub</a> |
-						<a href="resume href" target="_blank">Resume</a>
+						<a href="./Assets/Files/Tyler Smith Full Stack Web Developer.pdf" target="_blank">Resume</a>
 					</small>
 					<br>
 					<small>713-854-6795 | tylerdrew.work@gmail.com</small>
