--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					<small> 
 						<a href="https://www.linkedin.com/in/tyler-smith-atx/" target="_blank">LinkedIn</a> |
 						<a href="https://github.com/Sakiskid" target="_blank">GitHub</a> |
-						<a href="resume href" target="_blank">Resume</a>
+						<a href="./Assets/Files/Tyler Smith Full Stack Web Developer.pdf" target="_blank">Resume</a>
 					</small>
 				</div>
 			</div>
