final commit, except readme

--- a/portfolio.html
+++ b/portfolio.html
@@ -149,9 +149,15 @@
 						<a href="https://github.com/Sakiskid" target="_blank">GitHub</a> |
 						<a href="./Assets/Files/Tyler Smith Full Stack Web Developer.pdf" target="_blank">Resume</a>
 					</small>
-					<br>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col pt-1">
 					<small>713-854-6795 | tylerdrew.work@gmail.com</small>
-					<br>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col pt-1">
 					<small class="footer-muted">Created by Tyler Smith | Last updated Sept. 2020</small>
 				</div>
 			</div>
