removed header and added header name

--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -10,13 +10,11 @@
 </head>
 
 <body>
-	<header id="index-header">
-		<span>Tyler Smith</span>
-	</header>
-
-	<body>
-
-	</body>
+	<div id="header-name">
+		Tyler Smith
+	</div>
+	<script src="anime.min.js"></script>
+	<script src="../js/index.js"></script>
 </body>
 
 </html>
