replaced anime.js with GSAP

--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -13,11 +13,10 @@
 	<div id="header-name">
 		Tyler Smith
 	</div>
-	<img src="../svg/Tyler-Smith.svg" alt="Tyler Smith" id="header-name">
-	<svg>
-		<path></path>
-	</svg>
-	<script src="../anime.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/TextPlugin.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollToPlugin.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
 	<script src="../js/index.js"></script>
 </body>
 
