--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -10,9 +10,22 @@
 </head>
 
 <body>
-	<div id="header-name">
-		Tyler Smith
+	<div id="container">
+		<section id="index-container">
+			<div id="header-name">
+				Tyler Smith
+			</div>
+			<button class="index-link" onclick="showPortfolio()">
+				Portfolio
+			</button>
+		</section>
+		
+		<section id="portfolio-container">
+			tesointoisentoinsoeitn
+		</section>
 	</div>
+
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/TextPlugin.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollToPlugin.min.js"></script>
