section jumping is working flawlessly!

--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -11,17 +11,23 @@
 
 <body>
 	<div id="container">
+
+		<!-- ====== Index ======= -->
 		<section id="index-container">
 			<div id="header-name">
 				Tyler Smith
 			</div>
-			<button class="index-link" onclick="showPortfolio()">
+			<button class="index-link" onclick="moveToSection('portfolio')">
 				Portfolio
 			</button>
 		</section>
 		
+		<!-- ====== Portfolio ======= -->
 		<section id="portfolio-container">
 			tesointoisentoinsoeitn
+			<button onclick="moveToSection('index')">
+				Homepage
+			</button>
 		</section>
 	</div>
 
