added mock contact page

--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -17,17 +17,20 @@
 			<div id="header-name">
 				Tyler Smith
 			</div>
-			<button class="index-link" onclick="moveToSection('portfolio')">
-				Portfolio
-			</button>
+			<button class="index-link" onclick="moveToSection('portfolio')">Portfolio</button>
+			<button class="index-link" onclick="moveToSection('contact')">Contact</button>
 		</section>
 		
 		<!-- ====== Portfolio ======= -->
 		<section id="portfolio-container">
 			tesointoisentoinsoeitn
-			<button onclick="moveToSection('index')">
-				Homepage
-			</button>
+			<button onclick="moveToSection('index')">Homepage</button>
+		</section>
+
+		<!-- ====== Contant ======= -->
+		<section id="contact-container">
+			Yo, contact me
+			<button onclick="moveToSection('index')">Homepage</button>
 		</section>
 	</div>
 
