last commit before I try to rework... the camera thing is too much I think

--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -19,17 +19,18 @@
 			<div id="header-name">
 				Tyler Smith
 			</div>
-			<button class="index-link" onclick="moveToSection('portfolio')">Portfolio</button>
-			<button class="index-link" onclick="moveToSection('contact')">Contact</button>
+			<a class="index-link" onclick="moveToSection('portfolio')">Portfolio</a>
+			<br>
+			<a class="index-link" onclick="moveToSection('contact')">Contact</a>
 		</section>
 		
 		<!-- ====== Portfolio ======= -->
 		<section id="portfolio-container">
 			tesointoisentoinsoeitn
-			<button onclick="moveToSection('index')">Homepage</button>
+			<a onclick="moveToSection('index')">Homepage</a>
 		</section>
 
-		<!-- ====== Contant ======= -->
+		<!-- ====== Contact ======= -->
 		<section id="contact-container">
 			Yo, contact me
 			<button onclick="moveToSection('index')">Homepage</button>
