--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -19,9 +19,10 @@
 			<div id="header-name">
 				Tyler Smith
 			</div>
-			<a class="index-link" onclick="moveToSection('portfolio')">Portfolio</a>
-			<br>
-			<a class="index-link" onclick="moveToSection('contact')">Contact</a>
+			<div class="links-wrapper">
+				<a class="index-link button-large" onclick="moveToSection('portfolio')">Portfolio</a>
+				<a class="index-link button-large" onclick="moveToSection('contact')">Contact</a>
+			</div>
 		</section>
 		
 		<!-- ====== Portfolio ======= -->
