--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -11,19 +11,21 @@
 
 <body>
 	<div id="splash"></div>
-	<div id="background-image"></div>
-
 	<div id="container">
 
 		<!-- ====== Index ======= -->
 		<section id="index-container">
+			<div class="background-image"></div>
 			<div class="content-panel">
-				<div id="header-name">
-					Tyler Smith
+				<div class="panel-header">
+					<span id="header-name">Tyler Smith</span>
 				</div>
-				<div class="links-wrapper">
-					<a class="index-link button-large" onclick="moveToSection('portfolio')">Portfolio</a>
-					<a class="index-link button-large" onclick="moveToSection('contact')">Contact</a>
+				<div class="panel-body">
+					<div class="links-wrapper">
+						<a class="index-link button-large button" onclick="moveToSection('portfolio')">Portfolio</a>
+						<a class="index-link button-large button" onclick="moveToSection('contact')">Contact</a>
+					</div>
+					Here's some text
 				</div>
 			</div>
 		</section>
