adding fog to index, index now has its own scrolltrigger

--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -16,6 +16,8 @@
 		<!-- ====== Index ======= -->
 		<section id="index-container">
 			<div class="background-image"></div>
+			<div id="fx-fog"></div>
+
 			<div class="content-panel">
 				<div class="panel-header">
 					<span id="header-name">Tyler Smith</span>
@@ -32,6 +34,8 @@
 		
 		<!-- ====== Portfolio ======= -->
 		<section id="portfolio-container">
+			<header>Portfolio</header>
+			<div class="background-image"></div>
 			<div class="content-panel">
 
 				tesointoisentoinsoeitn
@@ -41,6 +45,8 @@
 
 		<!-- ====== Contact ======= -->
 		<section id="contact-container">
+			<header>Contact</header>
+			<div class="background-image"></div>
 			<div class="content-panel">
 
 				Yo, contact me
