fog is now more colors than anythihng

--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -16,7 +16,11 @@
 		<!-- ====== Index ======= -->
 		<section id="index-container">
 			<div class="background-image"></div>
-			<div id="fx-fog"></div>
+			<div id="fx-fog">
+				<div class="fog-particle"></div>
+				<div class="fog-particle"></div>
+				<div class="fog-particle"></div>
+			</div>
 
 			<div class="content-panel">
 				<div class="panel-header">
