trees in portfolio are separate from bg, and rise as user scrolls

--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -38,8 +38,9 @@
 		
 		<!-- ====== Portfolio ======= -->
 		<section id="portfolio-container">
-			<header>Portfolio</header>
-			<div class="background-image"></div>
+			<header class="section-header">Portfolio</header>
+			<div class="background-image" id="portfolio-bg-trees"></div>
+			<div class="background-image" id="portfolio-bg-stars"></div>
 			<div class="content-panel">
 
 				tesointoisentoinsoeitn
@@ -49,7 +50,7 @@
 
 		<!-- ====== Contact ======= -->
 		<section id="contact-container">
-			<header>Contact</header>
+			<header class="section-header">Contact</header>
 			<div class="background-image"></div>
 			<div class="content-panel">
 
