header and footer are now fixed elements with glass fx

--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -13,6 +13,22 @@
 	<div id="splash"></div>
 	<div id="container">
 
+		<header class="glass">
+			<div class="header-section" id="header-section-index">
+				Tyler Smith
+			</div>
+			<div class="header-section" id="header-section-portfolio">
+				Portfolio
+			</div>
+			<div class="header-section" id="header-section-contact">
+				Contact
+			</div>
+		</header>
+
+		<footer class="glass">
+
+		</footer>
+
 		<!-- ====== Index ======= -->
 		<section id="index-container">
 			<div class="background-image"></div>
@@ -31,14 +47,15 @@
 						<a class="index-link button-large button" onclick="moveToSection('portfolio')">Portfolio</a>
 						<a class="index-link button-large button" onclick="moveToSection('contact')">Contact</a>
 					</div>
-					Here's some text
+					<p>
+						This portfolio uses no CSS libraries. Everything here has been styled solely by me (with the exeption of MeyerWeb Reset)!
+					</p>
 				</div>
 			</div>
 		</section>
 		
 		<!-- ====== Portfolio ======= -->
 		<section id="portfolio-container">
-			<header class="section-header">Portfolio</header>
 			<div class="background-image" id="portfolio-bg-trees"></div>
 			<div class="background-image" id="portfolio-bg-stars"></div>
 			<div class="content-panel">
@@ -50,7 +67,6 @@
 
 		<!-- ====== Contact ======= -->
 		<section id="contact-container">
-			<header class="section-header">Contact</header>
 			<div class="background-image"></div>
 			<div class="content-panel">
 
