header now changes slot and text depending on what section the user is ingit add .! so coolgit add .

--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -14,14 +14,16 @@
 	<div id="container">
 
 		<header class="glass">
-			<div class="header-section" id="header-section-index">
-				Tyler Smith
-			</div>
-			<div class="header-section" id="header-section-portfolio">
-				Portfolio
-			</div>
-			<div class="header-section" id="header-section-contact">
-				Contact
+			<div id="header-section-wrapper">
+				<div class="header-section" id="header-section-index">
+					Tyler Smith
+				</div>
+				<div class="header-section" id="header-section-portfolio">
+					Portfolio
+				</div>
+				<div class="header-section" id="header-section-contact">
+					Contact
+				</div>
 			</div>
 		</header>
 
