footer ticker now displayinggit add .git add .git add . :D

--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -28,7 +28,11 @@
 		</header>
 
 		<footer class="glass">
-
+			<div id="footer-section-wrapper">
+				<div class="footer-section">Here's what will display on Tyler Smith</div>
+				<div class="footer-section">This is my portfolio!</div>
+				<div class="footer-section">And here's my contact page</div>
+			</div>
 		</footer>
 
 		<!-- ====== Index ======= -->
