set up portfolio content grid

--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -65,7 +65,25 @@
 			<div class="background-image" id="portfolio-bg-trees"></div>
 			<div class="background-image" id="portfolio-bg-stars"></div>
 			<div class="content-panel">
-				
+				<h1>Featured Projects</h1>
+
+				<!-- 4 Features Projects for the portfolio -->
+				<article class="portfolio-project" id="portfolio-project-1">
+					<h2>Big Picture</h2>
+					<p>Test Description Here, Lorem Ipsum or whatever</p>
+				</article>
+				<article class="portfolio-project" id="portfolio-project-2">
+					<h2>Off Your Chest</h2>
+					<p>Test Description Here, Lorem Ipsum or whatever</p>
+				</article>
+				<article class="portfolio-project" id="portfolio-project-3">
+					<h2>Other</h2>
+					<p>Test Description Here, Lorem Ipsum or whatever</p>
+				</article>
+				<article class="portfolio-project" id="portfolio-project-4">
+					<h2>Big Picture</h2>
+					<p>Test Description Here, Lorem Ipsum or whatever</p>
+				</article>
 			</div>
 		</section>
 
