added wood textures and font to portfolio page

--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -65,24 +65,31 @@
 			<div class="background-image" id="portfolio-bg-trees"></div>
 			<div class="background-image" id="portfolio-bg-stars"></div>
 			<div class="content-panel">
-				<h1>Featured Projects</h1>
-
+				<div class="panel-header">
+					<h1>Featured Web Applications</h1>
+					<h2>All of these projects were created in under one week.</h2>
+				</div>
 				<!-- 4 Features Projects for the portfolio -->
 				<article class="portfolio-project" id="portfolio-project-1">
 					<h2>Big Picture</h2>
-					<p>Test Description Here, Lorem Ipsum or whatever</p>
+					<img src="../my-images/bm.jpg" alt="">
+					<p>Optimize your resume and job application with the most popular keywords found in your field of work. 
+						Big Picture scrapes job posting sites like Indeed and Monster, then visualizes the data onto an easy-to-read graph.</p>
 				</article>
 				<article class="portfolio-project" id="portfolio-project-2">
 					<h2>Off Your Chest</h2>
-					<p>Test Description Here, Lorem Ipsum or whatever</p>
+					<img src="../my-images/bm.jpg" alt="">
+					<p>An anonymous community-driven note wall for sharing things you normally wouldn't.</p>
 				</article>
 				<article class="portfolio-project" id="portfolio-project-3">
-					<h2>Other</h2>
-					<p>Test Description Here, Lorem Ipsum or whatever</p>
+					<h2>Weather Dashboard</h2>
+					<img src="../my-images/bm.jpg" alt="">
+					<p>Locally stored global weather dashboard.</p>
 				</article>
 				<article class="portfolio-project" id="portfolio-project-4">
-					<h2>Big Picture</h2>
-					<p>Test Description Here, Lorem Ipsum or whatever</p>
+					<h2>Rimworld Cheat Sheet</h2>
+					<img src="../my-images/bm.jpg" alt="">
+					<p>Work in progress! A reference sheet for items found in the PC game Rimworld.</p>
 				</article>
 			</div>
 		</section>
