started contact bubble links

--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -96,8 +96,9 @@
 		<!-- ====== Contact ======= -->
 		<section id="contact-container">
 			<div class="background-image"></div>
+			<div class="contact-bubble">GitHub</div>
 			<div class="content-panel">
-				
+
 			</div>
 		</section>
 	</div>
