bubbles are animated

--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -96,7 +96,12 @@
 		<!-- ====== Contact ======= -->
 		<section id="contact-container">
 			<div class="background-image"></div>
-			<div class="contact-bubble">GitHub</div>
+			<div class="contact-bubbles-wrapper">
+				<div class="contact-bubble"><span>GitHub</span></div>
+				<div class="contact-bubble"><span>Email</span></div>
+				<div class="contact-bubble"><span>LinkedIn</span></div>
+				<div class="contact-bubble"><span>GitHub</span></div>
+			</div>
 			<div class="content-panel">
 
 			</div>
