removed header and footer scroller... looks a bit cleaner this way. may introduce it in the future

--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -13,7 +13,7 @@
 	<div id="splash"></div>
 	<div id="container">
 
-		<header class="glass">
+		<!-- <header class="glass">
 			<div id="header-section-wrapper">
 				<div class="header-section" id="header-section-index">
 					Tyler Smith
@@ -33,7 +33,7 @@
 				<div class="footer-section">This is my portfolio!</div>
 				<div class="footer-section">And here's my contact page</div>
 			</div>
-		</footer>
+		</footer> -->
 
 		<!-- ====== Index ======= -->
 		<section id="index-container">
