--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -69,26 +69,33 @@
 					<h1>Featured Web Applications</h1>
 				</div>
 				<!-- 4 Features Projects for the portfolio -->
-				<article class="portfolio-project" id="portfolio-project-1">
+				<!-- Sorting of projects can be changed by changing the id # of the <article> -->
+				<article class="portfolio-project" id="portfolio-project-2">
 					<h2>Big Picture</h2>
-					<img src="../my-images/bm.jpg" alt="">
+					<img src="../my-images/portfolio-previews/bigpicture.png" alt="Big Picture Preview">
+					<a href="https://sakiskid.github.io/Big-Picture/">Big Picture</a>
 					<p>Optimize your resume and job application with the most popular keywords found in your field of work. 
 						Big Picture scrapes job posting sites like Indeed and Monster, then visualizes the data onto an easy-to-read graph.</p>
 				</article>
-				<article class="portfolio-project" id="portfolio-project-2">
+				<article class="portfolio-project" id="portfolio-project-1">
 					<h2>Off Your Chest</h2>
-					<img src="../my-images/bm.jpg" alt="">
+					<img src="../my-images/portfolio-previews/offyourchest.png" alt="Off Your Chest Preview">
+					<a href="https://off-your-chest.herokuapp.com/">Off Your Chest</a>
 					<p>An anonymous community-driven note wall for sharing things you normally wouldn't.</p>
 				</article>
 				<article class="portfolio-project" id="portfolio-project-3">
 					<h2>Weather Dashboard</h2>
-					<img src="../my-images/bm.jpg" alt="">
-					<p>Locally stored global weather dashboard.</p>
+					<img src="../my-images/portfolio-previews/weather.jpg" alt="Weather Dashboard Preview">
+					<a href="https://sakiskid.github.io/Weather-Dashboard/">Weather Dashboard</a>
+					<p>Locally stored minimalistic global weather dashboard. View a current or five-day forecast of any city in the world.</p>
 				</article>
 				<article class="portfolio-project" id="portfolio-project-4">
-					<h2>Rimworld Cheat Sheet</h2>
-					<img src="../my-images/bm.jpg" alt="">
-					<p>Work in progress! A reference sheet for items found in the PC game Rimworld.</p>
+					<h2>Ultimate Readme Generator</h2>
+					<a href="https://github.com/Sakiskid/Readme-Generator">Readme Generator</a>
+					<img src="../my-images/portfolio-previews/urg.png" alt="Ultimate Readme Generator Preview">
+					<p>
+						The best GitHub README generator around! This project was created without a UI, so everything is created through Node.js CLI. 
+						I still use this to generate my README's.</p>
 				</article>
 			</div>
 		</section>
