portfolio is now flex, resizes according to screen size

--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -13,6 +13,7 @@
 	<div id="splash"></div>
 	<div id="container">
 
+		<!-- This was a beautiful 'ticker' I made for a header and footer... but it just didn't seem professional -->
 		<!-- <header class="glass">
 			<div id="header-section-wrapper">
 				<div class="header-section" id="header-section-index">
