--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -48,13 +48,18 @@
 			<div class="content-panel">
 				<div class="panel-header">
 					<span id="header-name">Tyler Smith</span>
+					
 				</div>
 				<div class="panel-body">
 					<div class="links-wrapper">
-						<a class="index-link button-large button" onclick="moveToSection('portfolio')">Portfolio</a>
-						<a class="index-link button-large button" onclick="moveToSection('contact')">Contact</a>
+						<a class="index-link button" href="https://github.com/Sakiskid/">GitHub</a>
+						<a class="index-link button" href="https://www.linkedin.com/in/tyler-smith-atx/">LinkedIn</a>
+						<a class="index-link button" href="../Files/Tyler Smith - Experienced Full Stack Web Developer Resume.pdf">Download Resume</a>
 					</div>
-					<p>
+					<p id="contact-info">
+						tylerdrew.work@gmail.com | (713)-854-6795
+					</p>
+					<p id="index-about">
 						This portfolio uses no CSS libraries. Everything here has been styled solely by me (with the exeption of MeyerWeb Reset)!
 					</p>
 				</div>
