--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -103,7 +103,7 @@
 		</section>
 
 		<!-- ====== Contact ======= -->
-		<section id="contact-container">
+		<!-- <section id="contact-container">
 			<div class="background-image"></div>
 			<div class="contact-bubbles-wrapper">
 				<div class="contact-bubble"><span>GitHub</span></div>
@@ -114,7 +114,7 @@
 			<div class="content-panel">
 
 			</div>
-		</section>
+		</section> -->
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
