added more info to about page

--- a/Assets/html/index.html
+++ b/Assets/html/index.html
@@ -59,9 +59,18 @@
 						<a class="index-link button" href="https://www.linkedin.com/in/tyler-smith-atx/">LinkedIn</a>
 						<a class="index-link button" href="../Files/Tyler Smith - Experienced Full Stack Web Developer Resume.pdf">Download Resume</a>
 					</div>
-					<p id="index-about">
-						This portfolio uses no CSS libraries. Everything here has been styled solely by me (with the exeption of MeyerWeb Reset)!
-					</p>
+					<div id="index-about">
+						<h1>Hi, I'm Tyler. <br> I'm a C# Game Designer turned Full-Stack Web Developer.</h1>
+						<br>
+						<h2>My interests lie in performant algorithms, utility libraries, community-driven apps, and interactive design. <br> For some reason, I love being stumped by complex code!</h2>
+						<h2></h2>
+						<br><br>
+						<p>
+							This portfolio uses no CSS libraries. Everything here has been styled solely by me!
+							<br>
+							Tools used to make this portfolio: MeyerWeb Reset, GSAP Scrolltrigger.
+						</p>
+					</div>
 				</div>
 			</div>
 		</section>
