moved index to main directoryr for github deployment

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Tyler Smith's Portfolio</title>
-	<link rel="stylesheet" href="../css/reset.css">
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="Assets/css/reset.css">
+	<link rel="stylesheet" href="Assets/css/style.css">
 </head>
 
 <body>
@@ -57,7 +57,7 @@
 						</p>
 						<a class="index-link button" href="https://github.com/Sakiskid/">GitHub</a>
 						<a class="index-link button" href="https://www.linkedin.com/in/tyler-smith-atx/">LinkedIn</a>
-						<a class="index-link button" href="../Files/Tyler Smith - Experienced Full Stack Web Developer Resume.pdf">Download Resume</a>
+						<a class="index-link button" href="./Assets/Files/Tyler Smith - Experienced Full Stack Web Developer Resume.pdf">Download Resume</a>
 					</div>
 					<div id="index-about">
 						<h1>Hi, I'm Tyler. <br> I'm a C# Game Designer turned Full-Stack Web Developer.</h1>
@@ -86,23 +86,23 @@
 				<!-- 4 Features Projects for the portfolio -->
 				<!-- Sorting of projects can be changed by changing the id # of the <article> -->
 				<article class="portfolio-project" id="portfolio-project-2">
-					<img src="../my-images/portfolio-previews/bigpicture.png" alt="Big Picture Preview">
+					<img src="Assets/my-images/portfolio-previews/bigpicture.png" alt="Big Picture Preview">
 					<a href="https://sakiskid.github.io/Big-Picture/">Big Picture</a>
 					<p>Optimize your resume and job application with the most popular keywords found in your field of work. 
 						Big Picture scrapes job posting sites like Indeed and Monster, then visualizes the data onto an easy-to-read graph.</p>
 				</article>
 				<article class="portfolio-project" id="portfolio-project-1">
-					<img src="../my-images/portfolio-previews/offyourchest.png" alt="Off Your Chest Preview">
+					<img src="Assets/my-images/portfolio-previews/offyourchest.png" alt="Off Your Chest Preview">
 					<a href="https://off-your-chest.herokuapp.com/">Off Your Chest</a>
 					<p>An anonymous community-driven note wall for sharing things you normally wouldn't.</p>
 				</article>
 				<article class="portfolio-project" id="portfolio-project-3">
-					<img src="../my-images/portfolio-previews/weather.jpg" alt="Weather Dashboard Preview">
+					<img src="Assets/my-images/portfolio-previews/weather.jpg" alt="Weather Dashboard Preview">
 					<a href="https://sakiskid.github.io/Weather-Dashboard/">Weather Dashboard</a>
 					<p>Locally stored minimalistic global weather dashboard. View a current or five-day forecast of any city in the world.</p>
 				</article>
 				<article class="portfolio-project" id="portfolio-project-4">
-					<img src="../my-images/portfolio-previews/urg.png" alt="Ultimate Readme Generator Preview">
+					<img src="Assets/my-images/portfolio-previews/urg.png" alt="Ultimate Readme Generator Preview">
 					<a href="https://github.com/Sakiskid/Readme-Generator">Readme Generator</a>
 					<p>
 						The best GitHub README generator around! This project was created without a UI, so everything is created through Node.js CLI. 
@@ -131,7 +131,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/TextPlugin.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollToPlugin.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
-	<script src="../js/index.js"></script>
+	<script src="./Assets/js/index.js"></script>
 </body>
 
 </html>
