--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
-    <link href="https://fonts.googleapis.com/css2?family=Lora&family=Montserrat&family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora&family=Montserrat&family=Raleway:wght@100&display=swap" rel="stylesheet">
     <!-- <link href="https://fonts.googleapis.com/css2?&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?:wght@100&display=swap" rel="stylesheet"> -->
     <title>React App</title>
