--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,12 @@
     -->
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Montserrat&family=Raleway:wght@100&display=swap" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
     <!-- <link href="https://fonts.googleapis.com/css2?&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?:wght@100&display=swap" rel="stylesheet"> -->
     <title>React App</title>
