--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     />
     <!-- <link href="https://fonts.googleapis.com/css2?&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?:wght@100&display=swap" rel="stylesheet"> -->
-    <title>React App</title>
+    <title>Tyler Smith's Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
